some things its been a while

--- a/codenamesBase.html
+++ b/codenamesBase.html
@@ -6,34 +6,42 @@
 </head>
 
 <body>
-
     <div class="mainGrid">
-        <div class="gridItem">1</div>
-        <div class="gridItem">2</div>
-        <div class="gridItem">3</div>
-        <div class="gridItem">4</div>
-        <div class="gridItem">5</div>
-        <div class="gridItem">6</div>
-        <div class="gridItem">7</div>
-        <div class="gridItem">8</div>
-        <div class="gridItem">9</div>
-        <div class="gridItem">10</div>
-        <div class="gridItem">11</div>
-        <div class="gridItem">12</div>
-        <div class="gridItem">13</div>
-        <div class="gridItem">14</div>
-        <div class="gridItem">15</div>
-        <div class="gridItem">16</div>
-        <div class="gridItem">17</div>
-        <div class="gridItem">18</div>
-        <div class="gridItem">19</div>
-        <div class="gridItem">20</div>
-        <div class="gridItem">21</div>
-        <div class="gridItem">22</div>
-        <div class="gridItem">23</div>
-        <div class="gridItem">24</div>
-        <div class="gridItem">25</div>
+        <div class = "gridRow">
+            <div class="gridItem"><p>1</p></div>
+            <div class="gridItem"><p>2</p></div>
+            <div class="gridItem"><p>3</p></div>
+            <div class="gridItem"><p>4</p></div>
+            <div class="gridItem"><p>5</p></div>
+        </div>
+        <div class = "gridRow">
+            <div class="gridItem"><p>6</p></div>
+            <div class="gridItem"><p>7</p></div>
+            <div class="gridItem"><p>8</p></div>
+            <div class="gridItem"><p>9</p></div>
+            <div class="gridItem"><p>10</p></div>
+        </div>
+        <div class = "gridRow">
+            <div class="gridItem"><p>11</p></div>
+            <div class="gridItem"><p>12</p></div>
+            <div class="gridItem"><p>13</p></div>
+            <div class="gridItem"><p>14</p></div>
+            <div class="gridItem"><p>15</p></div>
+        </div>
+        <div class = "gridRow">
+            <div class="gridItem"><p>16</p></div>
+            <div class="gridItem"><p>17</p></div>
+            <div class="gridItem"><p>18</p></div>
+            <div class="gridItem"><p>19</p></div>
+            <div class="gridItem"><p>20</p></div>
+        </div>
+        <div class = "gridRow">
+            <div class="gridItem"><p>21</p></div>
+            <div class="gridItem"><p>22</p></div>
+            <div class="gridItem"><p>23</p></div>
+            <div class="gridItem"><p>24</p></div>
+            <div class="gridItem"><p>25</p></div>
+        </div>
     </div>
-
 </body>
 </html>
